...
            contentDescription = "Abrir menú",
            tint = ColorTextWhite,
            modifier = Modifier
                .align(Alignment.TopStart)
                .padding(start = 20.dp, top = 20.dp)
                .size(40.dp)
                .testTag("boton_hamburguesa")
                .clickable(onClick = onOpenDrawer),
        )

        Column(
            modifier = Modifier
                .align(Alignment.BottomStart)
...
                fontWeight = FontWeight.Bold,
                color = ColorTextWhite,
                modifier = Modifier.testTag("saludo_home"),
            )
            Spacer(modifier = Modifier.height(8.dp))
            Text(
                text = "Nos alegra tenerte de nuevo por aquí",
                fontSize = 20.sp,
                color = ColorTextWhite,
                modifier = Modifier.width(220.dp),
            )
        }
    }
...
